man3_MANS = vd_abs.3 vd_acos.3 vd_acosh.3 vd_add.3 vd_addx.3 vd_asin.3 vd_asinh.3 vd_atan2.3 vd_atan.3 vd_atanh.3 vd_cbrt.3 vd_cdfnorm.3 vd_cdfnorminv.3 vd_ceil.3 vd_cos.3 vd_cosh.3 vd_div.3 vd_divx.3 vd_erf.3 vd_erfc.3 vd_erfcinv.3 vd_erfinv.3 vd_exp.3 vd_expm1.3 vd_floor.3 vd_hypot.3 vd_inv.3 vd_invcbrt.3 vd_invsqrt.3 vd_lgamma.3 vd_ln.3 vd_log10.3 vd_log1p.3 vd_modf.3 vd_mul.3 vd_mulx.3 vd_nearbyint.3 vd_negate.3 vd_pow2o3.3 vd_pow.3 vd_pow3o2.3 vd_powx.3 vd_rint.3 vd_round.3 vd_sin.3 vd_sincos.3 vd_sinh.3 vd_sqr.3 vd_sqrt.3 vd_sub.3 vd_subx.3 vd_tan.3 vd_tanh.3 vd_tgamma.3 vd_trunc.3 vd_xdiv.3 vd_xsub.3 vz_abs.3 vz_acos.3 vz_acosh.3 vz_add.3 vz_addx.3 vz_arg.3 vz_asin.3 vz_asinh.3 vz_atan.3 vz_atanh.3 vz_conj.3 vz_cos.3 vz_cosh.3 vz_div.3 vz_divx.3 vz_exp.3 vz_ln.3 vz_log10.3 vz_mul.3 vz_mulbyconj.3 vz_mulx.3 vz_negate.3 vz_negatereal.3 vz_pow.3 vz_powx.3 vz_sin.3 vz_sinh.3 vz_sqrt.3 vz_sub.3 vz_subx.3 vz_tan.3 vz_tanh.3 vz_xdiv.3 vz_xsub.3