lib_LTLIBRARIES = libizyreference.la


libizyreference_la_CPPFLAGS = -I ../../include/ -I ../../ -Werror
libizyreference_la_LIBADD = 
libizyreference_la_LDFLAGS = -version-info $(LIBIZY_VERSION)
libizyreference_la_SOURCES = \
reference_vd_abs.c\
reference_vd_acos.c\
reference_vd_acosh.c\
reference_vd_add.c\
reference_vd_addx.c\
reference_vd_asin.c\
reference_vd_asinh.c\
reference_vd_atan2.c\
reference_vd_atan.c\
reference_vd_atanh.c\
reference_vd_cbrt.c\
reference_vd_cdfnorm.c\
reference_vd_cdfnorminv.c\
reference_vd_ceil.c\
reference_vcos.c\
reference_vd_cosh.c\
reference_vd_div.c\
reference_vd_divx.c\
reference_vd_erf.c\
reference_vd_erfc.c\
reference_vd_erfcinv.c\
reference_vd_erfinv.c\
reference_vd_exp.c\
reference_vd_expm1.c\
reference_vd_floor.c\
reference_vd_hypot.c\
reference_vd_inv.c\
reference_vd_invcbrt.c\
reference_vd_invsqrt.c\
reference_vd_lgamma.c\
reference_vd_linearfrac.c\
reference_vd_ln.c\
reference_vd_log10.c\
reference_vd_log1p.c\
reference_vd_modf.c\
reference_vd_mul.c\
reference_vd_mulx.c\
reference_vd_nearbyint.c\
reference_vd_pow2o3.c\
reference_vd_pow3o2.c\
reference_vd_pow.c\
reference_vd_powx.c\
reference_vd_rint.c\
reference_vd_round.c\
reference_vd_sin.c\
reference_vd_sincos.c\
reference_vd_sinh.c\
reference_vd_sqr.c\
reference_vd_sqrt.c\
reference_vd_sub.c\
reference_vd_subx.c\
reference_vd_tan.c\
reference_vd_tanh.c\
reference_vd_tgamma.c\
reference_vd_trunc.c

AM_CFLAGS=@CFLAGS@ -fPIC -Wall
AM_LDFLAGS=-no-undefined
# reference_vd_cos.c